--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -5,7 +5,7 @@
   <%= file_field_tag :upload %>
   <br>
   <%= label_tag 'description' %>
-  <%= text_field_tag :discription %>
+  <%= text_field_tag :description %>
   <br>
   <%= submit_tag 'Upload' %>
 <% end %>
